apps/wallabag/base/wallabag-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
spec:
  selector:
    app: wallabag
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
